# flow-state

./: .gitignore  .markdownlint.json  .markdownlintignore  .mcp.json  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE-spec.md  CLAUDE.md  DEVELOPMENT.md  LICENSE  README.md  TESTING.md  TODO.md  process_video_data.py  pyproject.toml
imap-stream-mcp/: .mcp.json  CHANGELOG.md  CLAUDE.md  DEVELOPMENT_CONTEXT.md  LICENSE  README.md  TODO.md  bodystructure.py  debug_imap.py  imap_client.py  imap_stream_mcp.py  markdown_utils.py  pyproject.toml  session.py  setup.py
imap-stream-mcp/.claude-plugin/: marketplace.json  plugin.json
imap-stream-mcp/tests/: conftest.py  test_flag_parsing.py  test_imap_client.py  test_imap_stream_mcp.py  test_search_flags.py  test_session.py
tests/: pyproject.toml
tests/builder-cli-tool/: test_generate_cli.py  test_validate_tool.py
tests/builder-mcp/: conftest.py  test_generate_mcp.py  test_validate_mcp.py
tests/builder-project/: conftest.py  test_build_project.py
tests/builder-skill/: conftest.py  test_generate_skill.py  test_validate_structure.py
tests/cli-tool-builder/: test_generate_cli.py  (+1 more)
youtube-to-markdown/: CHANGELOG.md  LICENSE  README.md  SKILL.md  SKILL_lite.md  TODO.md  UPDATE_MODE.md  apply_paragraph_breaks.py  check_existing.py  deduplicate_vtt.py  extract_comments.py  extract_data.py  extract_transcript.py  extract_transcript_whisper.py  file_ops.py  finalize.py  finalize_lite.py  prepare_update.py  pyproject.toml  shared_types.py  template.md  template_comments.md  template_transcript.md  update_metadata.py
(+423 files in other folders)
