[project]
name = "imap-stream-mcp"
version = "0.4.1"
description = "Lightweight IMAP MCP server for Claude"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
    "imapclient>=3.0.0",
    "keyring>=25.0.0",
    "html2text>=2025.4.15",
    "markdown>=3.10",
    "pymdown-extensions>=10.20",
]

[project.scripts]
imap-stream = "imap_stream_mcp:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
