[project]
name = "flow-state-tests"
version = "0.1.0"
description = "Tests for flow-state skills and MCP servers"
requires-python = ">=3.11"
dependencies = [
    "pytest>=8.0",
    "imap-stream-mcp",
]

[tool.uv.sources]
imap-stream-mcp = { path = "../imap-stream-mcp" }

[tool.pytest.ini_options]
testpaths = [
    "youtube-to-markdown",
    "imap-stream-mcp",
]
python_files = "test_*.py"
python_functions = "test_*"
